2020-10-22  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* doc/poke.texi: output of `.info ios`commands: Add `Type` column.
	Minor tweaks to make them consistent.
	* doc/poke.texi (From Bytes to Integers): Remove the description of
	little-endian integers.
	* HACKING (Appendix): Fix `pk-utils.[ch]` paths.

2020-10-20  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/ios-dev-stream.c (ios_dev_stream_close): Free buffer only
	in read mode.
	* libpoke/ios-buffer.h (ios_buffer_free): Change return type to void.
	* libpoke/ios-buffer.c (ios_buffer_free): Handle buffer == NULL.

2020-10-20  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/ios-dev-stream.c: Add missing include "pk-utils.h".

2020-10-19  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* testsuite/poke.mi-json/pk_int.json: Add new line at the end.
	* testsuite/poke.mi-json/pk_uint.json: Likewise.
	* testsuite/poke.mi-json/pk_offset.json: Likewise.
	* testsuite/poke.mi-json/pk_string.json: Likewise.
	* testsuite/poke.mi-json/pk_array.json: Add new line at the end and
	trim trailing whitespaces.
	* testsuite/poke.mi-json/pk_sct.json: Likewise.
	* poke/pk-cmd-ios.c: Expand TAB to 8 spaces.
	* libpoke/ios-buffer.h: Likewise.
	* libpoke/ios-buffer.c: Likewise.
	* libpoke/ios.c: Put space after function name.
	* libpoke/ios-dev-stream.c: Expand TAB to 8 spaces. Put space after
	function names. Use STREQ. Remove `if` before `free`. Remove inclusion
	of assert.h.
	* libpoke/ios-buffer.h: Reformat function prototypes according to the
	GNU Coding Standards.

2020-10-12  Egeyar Bagcioglu  <egeyar@gmail.com>

	* libpoke/Makefile.am (libpoke_la_SOURCES): Add ios-buffer.h,
	ios-buffer.c and ios-dev-stream.c.
	* libpoke/ios-buffer.c: New file.
	* libpoke/ios-buffer.h: New file.
	* libpoke/ios-dev-stream.c: New file.
	* libpoke/ios.c: Extern ios_dev_stream.
	(ios_dev_ifs): Add ios_dev_stream.

2020-10-11  Egeyar Bagcioglu  <egeyar@gmail.com>
