@@ -1,3 +1,9 @@
+2020-10-25  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pvm.h: Rename pvm_type_equal to pvm_type_equal_p.
+	* libpoke/pvm.jitter: Likewise.
+	* libpoke/pvm-val.c: Likewise.
+
 2020-10-22  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>
 
 	* doc/poke.texi: output of `.info ios`commands: Add `Type` column.
